[package]
name = "justid-heimdall"
version = "0.1.0"
edition = "2024"
authors = ["Revanth<revanthshalonraj@gmail.com>"]
description = "A relationship-based access control (RBAC/ABAC) server that provides fine-grained permissions management"

[lib]
path = "src/lib.rs"

[[bin]]
name ="heimdall"
path = "src/main.rs"

[dependencies]
serde = { version = "^1.0.219", features = ["derive"]}
serde_json = { version = "^1.0.140"}
tokio = { version = "^1.44.1", features = ["macros", "rt-multi-thread"]}
sqlx = { version = "^0.8.3", features = ["macros", "runtime-tokio", "postgres", "uuid", "chrono"]}
uuid = { version = "^1.16.0", features = ["serde", "v4", "v5"]}
chrono = { version = "^0.4.40", features = ["serde"]}

# Axum
axum = { version = "^0.8.3"}
async-trait = { version = "^0.1.88"}
tower = { version = "^0.5.2"}
tower-http = { version = "^0.6.2", features = ["cors", "trace"]}

# Configuration
config = { version = "0.15.11", features = ["toml", "yaml", "json5"]}

# Tracing 
tracing = { version = "^0.1.41"}
tracing-subscriber = { version = "^0.3.19", features = ["env-filter", "fmt", "json"]}
